settings: Fix alignment of left-side icons in org setting tab.
This fixes a part of #10954.

--- a/static/styles/settings.scss
+++ b/static/styles/settings.scss
@@ -1646,6 +1646,7 @@ input[type=text]#settings_search {
     width: 18px;
     height: 18px;
     margin: 10px 10px;
+    text-align: center;
 
     font-size: 1.4em;
     color: hsl(0, 0%, 53%);
